--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: url(/images/banner.png);
+    background-image: url(images/banner.png);
     background-position: center;
     background-size: cover;
     position: relative;
