--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
+    background:green;
     background-image: url(images/banner.png);
     background-position: center;
     background-size: cover;
